# MoSheng

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _setup.cmd  build.spec  config.py  i18n.py  launcher.py  main.py  pyproject.toml  settings_manager.py
assets/: default_vocabulary.csv
assets/shaders/: smoke.frag  smoke.frag.qsb
configs/: pyproject-cpu.toml  pyproject-cuda.toml
core/: asr_base.py  asr_qwen.py  audio_recorder.py  hotkey_manager.py  key_suppression_hook.py  model_downloader.py  sound_player.py  speaker_verifier.py  text_injector.py  text_processor.py  vad.py
docs/plans/: 2026-02-07-speaker-verification-design.md  2026-02-07-speaker-verification-plan.md
results/: benchmark.json  benchmark.md
scripts/: benchmark_models.py  build_dist.py  build_macos.py  install_macos.sh
ui/: app.py  enrollment_dialog.py  overlay.qml  overlay_window.py  settings_window.py  splash_screen.py  styles.py  tray_app.py
ui/shaders/: smoke.frag.qsb
utils/: autostart.py  logger.py
