[project]
name = "voiceinput"
version = "1.0.0"
description = "Local voice input tool powered by Qwen3-ASR"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "qwen-asr>=0.0.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pyobjc-framework-Quartz>=10.0",
    "PySide6>=6.7",
    "speechbrain>=1.0",
]

[tool.uv]
override-dependencies = [
    "numba>=0.60",
    "llvmlite>=0.43",
    "librosa>=0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "ui", "utils"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
