[project]
name = "voiceinput"
version = "1.2.0"
description = "Local voice input tool powered by Qwen3-ASR"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "qwen-asr>=0.0.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "PySide6>=6.7",
    "speechbrain>=1.0",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[tool.uv]
override-dependencies = [
    "numba>=0.60",
    "llvmlite>=0.43",
    "librosa>=0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "ui", "utils"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
